# python-switchbot-v2

./: .gitignore  setup.cfg
