[metadata]
name = python-switchbot-v2
version = attr: switchbot.__version__
description = A Python library to control SwitchBot devices connected to SwitchBot Hub.
author = Ahmed Reaz
author_email = dev@areaz.us
url = https://github.com/areazus/python-switchbot-v2
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    switchbot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Home Automation

[options]
install_requires =
    requests
    pyhumps
python_requires = >=3.7
packages = find: